2013-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stefan Neudorf: 31935: Doc/Zsh/builtins.yo,
	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c: further
	limit updates for 31930, 39134.

2013-10-31  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stefan Neudorf: 31930 / 31934: Doc/Zsh/builtins.yo,
	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c, configure.ac,
	Src/Builtins/rlimits.c:  New BSD limits; avoid clash with
	ulimit -k.

2013-10-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 31929: Src/jobs.c: fix DPUTS3() test condition from 31906.

2013-10-28  Bart Schaefer  <schaefer@zsh.org>

	* unposted: NEWS: mention HISTORY_IGNORE

2013-10-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 31922: Src/Zle/zle_utils.c (zlecharasstring): missing
	flip of bit five when Meta marker inserted.

2013-10-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 31912: Src/exec.c: in closemn(), distinguish closing for >&-
	from closing for a real redirect.  Fixes knock-on multios bug
	introduced by workers/20666 way back in 2005.

	* unposted (cf. users/18063): Functions/Zle/keeper: clean up
	some syntax nits, add working link to old Unix Review article

	* 31919: Src/exec.c, Src/init.c: fix deadlock when a shell builtin
	with a multio redirection is used on the left side of a pipeline,
	by making sure stdin/out/err file descriptors are closed for the
	multio copy process, which means not re-using those descriptors
	after they are closed and marked FDT_UNUSED in fdtable[].  For
	completeness, initialize their fdtable[] state to FDT_EXTERNAL.

2013-10-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 31909: Jun T: Completion/Unix/Command/_cat: new completion.

2013-10-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 31906: Src/jobs.c, Test/A05execution.ztst: printjob() should not
	reference oldjobtab for job numbers unless it is being called from
	bin_fg().  Add a DPUTS check in case this goes horribly wrong.