@@ -36,6 +36,10 @@
 #  define RLIMIT_LOCKS		RLIMIT_POSIXLOCKS
 #endif
 
+#ifdef RLIMIT_NTHR
+#  define RLIMIT_PTHREAD	RLIMIT_NTHR
+#endif
+
 enum {
     ZLIMTYPE_MEMORY,
     ZLIMTYPE_NUMBER,
@@ -318,12 +322,6 @@ printulimit(char *nam, int lim, int hard, int head)
 	    printf("-u: processes                       ");
 	break;
 # endif /* HAVE_RLIMIT_NPROC */
-# ifdef HAVE_RLIMIT_NTHR
-    case RLIMIT_NTHR:
-	if (head)
-	    printf("-r: threads                         ");
-	break;
-#endif /* HAVE_RLIMIT_NTHR */
 # if defined(HAVE_RLIMIT_VMEM) && (!defined(HAVE_RLIMIT_RSS) || !defined(RLIMIT_VMEM_IS_RSS))
     case RLIMIT_VMEM:
 	if (head)
@@ -375,7 +373,7 @@ printulimit(char *nam, int lim, int hard, int head)
 # ifdef HAVE_RLIMIT_PTHREAD
     case RLIMIT_PTHREAD:
 	if (head)
-	    printf("-N %2d: threads per process          ", RLIMIT_PTHREAD);
+	    printf("-T: threads per process             ");
 	break;
 # endif /* HAVE_RLIMIT_PTHREAD */
 # ifdef HAVE_RLIMIT_NICE
@@ -824,11 +822,6 @@ bin_ulimit(char *name, char **argv, UNUSED(Options ops), UNUSED(int func))
 		    res = RLIMIT_NOFILE;
 		    break;
 # endif /* HAVE_RLIMIT_NOFILE */
-# ifdef HAVE_RLIMIT_NTHR
-		case 'r':
-		    res = RLIMIT_NTHR;
-		    break;
-# endif /* HAVE_RLIMIT_NTHR */
 # ifdef HAVE_RLIMIT_NPROC
 		case 'u':
 		    res = RLIMIT_NPROC;
